--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,25 @@
 Django==1.3.1
-psycopg2==2.4.2
+South==0.7.3
+amqplib==1.0.2
+anyjson==0.3.1
+celery==2.4.1
+django-celery==2.4.1
+django-indexer==0.3.0
+django-kombu==0.9.4
+django-paging==0.2.4
+django-picklefield==0.1.9
+django-sentry==1.13.5
+django-templatetag-sugar==0.1
+eventlet==0.9.16
+greenlet==0.3.1
 gunicorn==0.12.2
+httplib2==0.7.1
+kombu==1.4.3
+lockfile==0.9.1
+oauth2==1.5.170
+psycopg2==2.4.2
+python-daemon==1.6
+python-dateutil==1.5
+raven==0.7.0
+simplejson==2.2.1
+wsgiref==0.1.2
